# 115-plus-desktop

./: .env  .eslintrc-auto-import.json  .lintstagedrc.json  .prettierignore  .release-it.json  CHANGELOG.md  LICENSE  README.md  auto-imports.d.ts  components.d.ts  env.d.ts  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 功能请求.md  错误报告.md
.github/workflows/: bump-version.yml  ci.yml  prerelease.yml  release.yml
scripts/: conventional-changelog.ts  getAria2.js  getAria2.ts  release-it-bumper.ts  release-it.d.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: aria2.rs  database.rs  lib.rs  main.rs  subtitle.rs  tray.rs  upload.rs
src-tauri/src/download/: events.rs  http.rs  mod.rs  persistence.rs  queue.rs  segment.rs  store.rs  throttle.rs  types.rs  writer.rs
src-tauri/src/download/events/: folder.rs  mod.rs  progress.rs  sync.rs  url.rs
src-tauri/src/upload/: api.rs  control.rs  error.rs  folder.rs  local.rs  mod.rs  oss.rs  progress.rs  queue.rs  store.rs  sync.rs
src/api/: aria2.ts  cloud.ts  config.ts  file.ts  upload.ts  user.ts  video.ts
src/api/types/: aria2.ts  cloud.ts  file.ts  upload.ts  user.ts  video.ts
src/components/BatchRenameModal/: BatchRenameModal.vue
src/composables/: useAppExit.ts  useCheckUpdate.ts  useCheckUpdate.tsx  useDownloadManager.ts  useSubtitleController.ts  useUploadManager.ts
src/db/: downloads.ts  uploads.ts
src/layout/: index.vue
src/router/: index.ts
src/store/: index.ts  setting.ts  user.ts
src/styles/: tailwind.css
src/utils/: rateLimit.ts  subtitleStyleUtils.ts
src/utils/http/: alova.ts  (+1 more)
(+44 files in other folders)
