[package]
name = "oof-plus-desktop"
version = "1.0.7"
description = "115+ 是一个基于 115 网盘开放平台的开源桌面客户端"
authors = ["lvzhenbo"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oof_plus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-http = "2.5.8"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-pinia = "4.2.0"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
ali-oss-rs = "0.2.5"
fs2 = "0.4.3"
sha1 = "0.11.0"
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
log = "0.4.29"
tauri-plugin-log = "2.8.0"
chrono = "0.4.44"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-process = "2.3.1"
